# activity-incident

./: !!start.bat  .env  ANALISIS_MEJORAS.md  CHANGELOG_BUG_FIXES.md  MEJORAS_VISUALES.md  SMTP_SETUP.md  VISUAL_IMPROVEMENTS_DONE.md  add_auth_middleware.py  app.py  auth.py  database.py  generate_hashes.py  main.py  pyproject.toml  requirements.txt  routes.py  run.py  tasks.json  tracker.db  tracker.db.backup
plans/2026-02-22_21-30-00_fix-critical-bugs/tasks/: 2026-02-22_21-30-00_bug-fixes.json  2026-02-22_22-00-00_visual-improvements.json
plans/2026-02-22_authentication-rbac/: plan.md
plans/2026-02-22_authentication-rbac/tasks/: 2026-02-22_auth-rbac-tasks.json
plans/2026-02-22_login-ui/: plan.md
plans/2026-02-22_login-ui/tasks/: 2026-02-22_14-00-00_login-ui-implementation.json  2026-02-22_14-30-00_fix-and-admin.json  2026-02-22_15-00-00_fix-registro-password-recovery.json
static/: app.js  index.html  styles.css  styles.css.backup  visual-improvements.css
