[project]
name = "activity-incident-tracker"
version = "0.1.0"
description = "Tracker profesional de actividades e incidencias por negocio y comercial"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "jinja2>=3.1",
    "watchfiles>=1.0",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0.1",
]
